// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge component > renders 1`] = `
<span
  class="Badge__lg8yeu0 Badge_theme_light__lg8yeu2"
>
  <p
    class="Typography__3igy4na Typography_base__3igy4n9 Typography_BodyStyle_noMargin_true__3igy4nb Typography_BodyStyle_size_s__3igy4ne"
  >
    Click me
  </p>
</span>
`;

exports[`Badge component > renders with a status 1`] = `
<span
  class="Badge__lg8yeu0 Badge_status_warning__lg8yeu5 Badge_theme_light__lg8yeu2"
>
  <svg
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.00002 3.99325L13.02 12.6666H2.98002L8.00002 3.99325ZM8.00002 1.33325L0.666687 13.9999H15.3334L8.00002 1.33325ZM8.66669 10.6666H7.33335V11.9999H8.66669V10.6666ZM8.66669 6.66659H7.33335V9.33325H8.66669V6.66659Z"
      fill="#CC9A36"
    />
  </svg>
  <p
    class="Typography__3igy4na Typography_base__3igy4n9 Typography_BodyStyle_noMargin_true__3igy4nb Typography_BodyStyle_size_s__3igy4ne"
  >
    Click me
  </p>
</span>
`;

exports[`Badge component > renders with a theme 1`] = `
<span
  class="Badge__lg8yeu0 Badge_theme_dark__lg8yeu1"
>
  <p
    class="Typography__3igy4na Typography_base__3igy4n9 Typography_BodyStyle_noMargin_true__3igy4nb Typography_BodyStyle_size_s__3igy4ne"
  >
    Click me
  </p>
</span>
`;

exports[`Badge component > renders with an icon 1`] = `
<span
  class="Badge__lg8yeu0 Badge_theme_light__lg8yeu2"
>
  <svg
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.00002 3.99325L13.02 12.6666H2.98002L8.00002 3.99325ZM8.00002 1.33325L0.666687 13.9999H15.3334L8.00002 1.33325ZM8.66669 10.6666H7.33335V11.9999H8.66669V10.6666ZM8.66669 6.66659H7.33335V9.33325H8.66669V6.66659Z"
      fill="#CC9A36"
    />
  </svg>
  <p
    class="Typography__3igy4na Typography_base__3igy4n9 Typography_BodyStyle_noMargin_true__3igy4nb Typography_BodyStyle_size_s__3igy4ne"
  >
    Click me
  </p>
</span>
`;
